[tool.poetry]
name = "project-chiral-entity-service"
version = "0.1.0"
description = "命名实体识别微服务"
authors = ["王博伟 <wozluohd@gmail.com>"]
readme = "README.md"
packages = [{ include = "project_chiral_entity_service" }]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.5.0"
en-core-web-trf = { path = "models/en_core_web_trf-3.5.0-py3-none-any.whl" }
pika = "^1.3.1"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
